# Flight-Info-Code-Exercise

./: CMakeLists.txt  FlightInfoLogger.service  README.md
include/: BufferHandler.h  CommunicationProtocol.h  Database.h  FlightInfoData.h  FlightInfoLogger.h  Message.h  MessageListener.h  PayloadParser.h
src/: BufferHandler.cpp  CMakeLists.txt  CommunicationProtocol.cpp  Database.cpp  FlightInfoData.cpp  FlightInfoLogger.cpp  MessageListener.cpp  PayloadParser.cpp  main.cpp
test/: CMakeLists.txt  test_bufferhandler.cpp
